--- a/App.xaml
+++ b/App.xaml
@@ -1,10 +1,10 @@
 ﻿<Application x:Class="ProjectManagementApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ProjectManagementApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:ProjectManagementApp">
     <Application.Resources>
         <ResourceDictionary>
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Styles/ModernStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
