--- a/App.xaml
+++ b/App.xaml
@@ -1,13 +1,14 @@
 ﻿<Application x:Class="ProjectManagementApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ProjectManagementApp">
+             xmlns:local="clr-namespace:ProjectManagementApp"
+             xmlns:converters="clr-namespace:ProjectManagementApp.Converters">
     <Application.Resources>
         <ResourceDictionary>
-            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Styles/ModernStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
