--- a/Pages/ContactsPage.xaml
+++ b/Pages/ContactsPage.xaml
@@ -33,9 +33,8 @@
 
         <!-- Contacts List -->
         <ListView Grid.Row="1" 
-                  ItemsSource="{Binding Contacts}"
-                  Background="Transparent"
-                  BorderThickness="0">
+          ItemsSource="{Binding Contacts}"
+          Style="{StaticResource ModernListView}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="Background" Value="Transparent"/>
