--- a/Windows/ConfirmationDialog.xaml
+++ b/Windows/ConfirmationDialog.xaml
@@ -2,30 +2,30 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="{Binding Title}"
-        Height="180" 
+        Height="170" 
         Width="400"
         WindowStartupLocation="CenterScreen"
         Style="{StaticResource ModernDialog}">
     <Grid Margin="20">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="{Binding Title}"
-                  Style="{StaticResource ModernDialogTitle}"/>
+        <!-- Message -->
+        <TextBlock Text="{Binding Message}"
+                  Foreground="White"
+                  FontSize="14"
+                  TextWrapping="Wrap"
+                  VerticalAlignment="Center"
+                  HorizontalAlignment="Center"
+                  TextAlignment="Center"/>
 
-        <TextBlock Grid.Row="1"
-                   Text="{Binding Message}"
-                   Style="{StaticResource ModernDialogLabel}"
-                   TextWrapping="Wrap"
-                   VerticalAlignment="Center"/>
-
-        <StackPanel Grid.Row="2" 
+        <!-- Buttons -->
+        <StackPanel Grid.Row="1" 
                     Orientation="Horizontal" 
-                    HorizontalAlignment="Right"
-                    Margin="0,20,0,0">
+                    HorizontalAlignment="Center"
+            Margin="0,15,0,0">
             <Button Content="Nie"
                     Style="{StaticResource ModernButton}"
                     Click="NoButton_Click"
