--- a/Windows/ContactDialog.xaml
+++ b/Windows/ContactDialog.xaml
@@ -1,8 +1,9 @@
 ﻿<Window x:Class="ProjectManagementApp.Windows.ContactDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:converters="clr-namespace:ProjectManagementApp.Converters"
         Title="{Binding DialogTitle}"
-        Height="170" 
+        Height="200" 
         Width="400"
         WindowStartupLocation="CenterScreen"
         Style="{StaticResource ModernDialog}">
@@ -10,10 +11,25 @@
         <StackPanel VerticalAlignment="Center" 
                     HorizontalAlignment="Center" 
                     Width="300">
+            <!-- Label -->
+            <TextBlock Text="Email:"
+                      Foreground="White"
+                      FontSize="16"
+                      Margin="0,0,0,5"/>
+
             <!-- Input -->
-            <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"
+            <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                      Style="{StaticResource ModernTextBox}"
-                     Margin="0,0,0,15"/>
+                     Margin="0,0,0,5"/>
+
+            <!-- Error Message Container - Fixed Height -->
+            <Grid Height="20" Margin="0,0,0,15">
+                <!-- Fixed height container with bottom margin -->
+                <TextBlock Text="{Binding ErrorMessage}"
+                          Foreground="#FF4C4C"
+                          FontSize="12"
+                          Visibility="{Binding ErrorMessage, Converter={StaticResource StringToVisibilityConverter}}"/>
+            </Grid>
 
             <!-- Buttons -->
             <StackPanel Orientation="Horizontal" 
