implemented equipment page based on employees pages; vacation status is replaced with maintenance status and start and end dates are deleted; name instead of name and surname

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -89,7 +89,7 @@
                     <RadioButton Content="Sprzęt" 
                                Style="{StaticResource NavButton}"
                                Checked="NavButton_Checked"
-                               Tag="Sprzęt"/>
+                               Tag="Sprzet"/>
                     <RadioButton Content="Baza" 
                                Style="{StaticResource NavButton}"
                                Checked="NavButton_Checked"
