--- a/Pages/ContactsPage.xaml
+++ b/Pages/ContactsPage.xaml
@@ -1,10 +1,13 @@
-﻿<UserControl x:Class="ProjectManagementApp.Pages.ContactsPage"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:local="clr-namespace:ProjectManagementApp.Pages"
-             mc:Ignorable="d">
+﻿<Page x:Class="ProjectManagementApp.Pages.ContactsPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:local="clr-namespace:ProjectManagementApp.Pages"
+      mc:Ignorable="d"
+      Title="Kontakty"
+      Background="#2D2D30">
+
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -18,74 +21,74 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock Text="Kontakty" 
-                       FontSize="24" 
-                       Foreground="White" 
-                       VerticalAlignment="Center"/>
+            <TextBlock Text="Lista Kontaktów"
+                      Foreground="White"
+                      FontSize="24"
+                      VerticalAlignment="Center"/>
 
-            <Button Grid.Column="1" 
-                    Content="Dodaj kontakt" 
+            <Button Grid.Column="1"
+                    Content="Dodaj Kontakt"
                     Style="{StaticResource ModernButton}"
                     Command="{Binding AddContactCommand}"
                     Width="150"
-                    Height="40"/>
+                    Height="35"/>
         </Grid>
 
         <!-- Contacts List -->
-        <ListView Grid.Row="1" 
-          ItemsSource="{Binding Contacts}"
-          Style="{StaticResource ModernListView}">
+        <ListView Grid.Row="1"
+                  Style="{StaticResource ModernListView}"
+                  ItemsSource="{Binding Contacts}"
+                  HorizontalContentAlignment="Stretch">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
-                    <Setter Property="Background" Value="Transparent"/>
-                    <Setter Property="Margin" Value="0,0,0,10"/>
-                    <Setter Property="Padding" Value="10"/>
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                    <Style.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#444445"/>
-                        </Trigger>
-                    </Style.Triggers>
+                    <Setter Property="Margin" Value="0,5"/>
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListViewItem">
+                                <Border Background="#383838"
+                                        CornerRadius="6"
+                                        Padding="15">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <!-- Contact Info -->
+                                        <TextBlock Text="{Binding Email}" 
+                                                 Foreground="White"
+                                                 FontSize="16"
+                                                 VerticalAlignment="Center"/>
+
+                                        <!-- Action Buttons -->
+                                        <Button Grid.Column="1"
+                                                Content="Edytuj"
+                                                Style="{StaticResource ModernButton}"
+                                                Command="{Binding DataContext.EditContactCommand, 
+                                                         RelativeSource={RelativeSource AncestorType=ListView}}"
+                                                CommandParameter="{Binding}"
+                                                Margin="0,0,10,0"
+                                                Width="100"
+                                                Height="35"/>
+
+                                        <Button Grid.Column="2"
+                                                Content="Usuń"
+                                                Style="{StaticResource ModernButton}"
+                                                Command="{Binding DataContext.DeleteContactCommand, 
+                                                         RelativeSource={RelativeSource AncestorType=ListView}}"
+                                                CommandParameter="{Binding}"
+                                                Width="100"
+                                                Height="35"/>
+                                    </Grid>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
                 </Style>
             </ListView.ItemContainerStyle>
-
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-
-                        <TextBlock Text="{Binding Email}" 
-                                 Foreground="White"
-                                 VerticalAlignment="Center"
-                                 FontSize="16"/>
-
-                        <Button Grid.Column="1" 
-                                Content="Edytuj"
-                                Style="{StaticResource ModernButton}"
-                                Command="{Binding DataContext.EditContactCommand, 
-                                          RelativeSource={RelativeSource AncestorType=ListView}}"
-                                CommandParameter="{Binding}"
-                                Width="100"
-                                Height="35"
-                                Margin="0,0,10,0"/>
-
-                        <Button Grid.Column="2" 
-                                Content="Usuń"
-                                Style="{StaticResource ModernButton}"
-                                Command="{Binding DataContext.DeleteContactCommand, 
-                                          RelativeSource={RelativeSource AncestorType=ListView}}"
-                                CommandParameter="{Binding}"
-                                Width="100"
-                                Height="35"/>
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
         </ListView>
     </Grid>
-</UserControl>
-    
-    
+</Page>
