--- a/Styles/ModernStyles.xaml
+++ b/Styles/ModernStyles.xaml
@@ -574,4 +574,10 @@
         </Setter>
     </Style>
 
+    <Style x:Key="ModernHeader" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Foreground" Value="#FFFFFF"/>
+        <Setter Property="Margin" Value="0,0,0,10"/>
+    </Style>
+
 </ResourceDictionary>
