--- a/Pages/ProjectsPage.xaml
+++ b/Pages/ProjectsPage.xaml
@@ -2,13 +2,257 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:ProjectManagementApp.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="ProjectsPage">
+      mc:Ignorable="d"
+      Title="Projekty"
+      Background="#2D2D30">
 
-    <Grid>
-        
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!-- Header with Add Button -->
+        <Grid Grid.Row="0" Margin="0,0,0,20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Text="Lista Projektów"
+                      Foreground="White"
+                      FontSize="24"
+                      VerticalAlignment="Center"/>
+
+            <Button Grid.Column="1"
+                    Content="Dodaj Projekt"
+                    Style="{StaticResource ModernButton}"
+                    Command="{Binding AddProjectCommand}"
+                    Width="150"
+                    Height="35"/>
+        </Grid>
+
+        <!-- Search Label -->
+        <TextBlock Grid.Row="1" 
+                   Text="Wyszukaj Projekt"
+                   Style="{StaticResource ModernDialogLabel}"
+                   Margin="0,0,0,5"/>
+
+        <!-- Search Box -->
+        <Grid Grid.Row="2" Margin="0,0,0,20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="400"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
+                     Style="{StaticResource ModernTextBox}"
+                     Width="400"
+                     HorizontalAlignment="Left"/>
+
+            <Button Grid.Column="1"
+                    Content="Wyczyść"
+                    Style="{StaticResource ModernButton}"
+                    Command="{Binding ClearSearchCommand}"
+                    Width="100"
+                    Height="35"
+                    Margin="10,0,0,0"
+                    Visibility="{Binding ClearButtonVisibility}"/>
+        </Grid>
+
+        <!-- Projects List -->
+        <ListView Grid.Row="3"
+                  Style="{StaticResource ModernListView}"
+                  ItemsSource="{Binding FilteredProjects}"
+                  HorizontalContentAlignment="Stretch">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Setter Property="Margin" Value="0,5"/>
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListViewItem">
+                                <Border Background="#383838"
+                                        CornerRadius="6"
+                                        Padding="15">
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="Auto"/>
+                                        </Grid.RowDefinitions>
+
+                                        <!-- Project Header with Actions -->
+                                        <Grid Grid.Row="0">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <TextBlock Text="{Binding Name}"
+                                                      Foreground="White"
+                                                      FontSize="16"/>
+
+                                            <Button Grid.Column="1"
+                                                    Content="Edytuj"
+                                                    Style="{StaticResource ModernButton}"
+                                                    Command="{Binding EditCommand}"
+                                                    Width="100"
+                                                    Height="35"
+                                                    Margin="0,0,10,0"/>
+
+                                            <Button Grid.Column="2"
+                                                    Content="Usuń"
+                                                    Style="{StaticResource ModernButton}"
+                                                    Command="{Binding DeleteCommand}"
+                                                    Width="100"
+                                                    Height="35"/>
+                                        </Grid>
+
+                                        <!-- Project Description -->
+                                        <TextBlock Grid.Row="1"
+                                                 Text="{Binding Description}"
+                                                 Foreground="#B0B0B0"
+                                                 Margin="0,10"/>
+
+                                        <!-- Resources Sections -->
+                                        <Grid Grid.Row="2">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <!-- Employees Section -->
+                                            <Border Grid.Column="0"
+                                                    Margin="0,0,10,0"
+                                                    Background="#2D2D30"
+                                                    CornerRadius="6"
+                                                    Padding="10">
+                                                <Grid>
+                                                    <Grid.RowDefinitions>
+                                                        <RowDefinition Height="Auto"/>
+                                                        <RowDefinition Height="*"/>
+                                                    </Grid.RowDefinitions>
+
+                                                    <Grid Grid.Row="0">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="*"/>
+                                                            <ColumnDefinition Width="Auto"/>
+                                                        </Grid.ColumnDefinitions>
+
+                                                        <TextBlock Text="Przypisani Pracownicy"
+                                                                 Foreground="White"
+                                                                 FontSize="14"/>
+
+                                                        <Button Grid.Column="1"
+                                                                Content="Przypisz"
+                                                                Style="{StaticResource ModernButton}"
+                                                                Command="{Binding AssignEmployeesCommand}"
+                                                                Width="100"
+                                                                Height="30"/>
+                                                    </Grid>
+
+                                                    <ItemsControl Grid.Row="1"
+                                                                ItemsSource="{Binding AssignedEmployees}"
+                                                                Margin="0,10,0,0">
+                                                        <ItemsControl.ItemTemplate>
+                                                            <DataTemplate>
+                                                                <Grid Margin="0,0,0,5">
+                                                                    <Grid.ColumnDefinitions>
+                                                                        <ColumnDefinition Width="*"/>
+                                                                        <ColumnDefinition Width="Auto"/>
+                                                                    </Grid.ColumnDefinitions>
+
+                                                                    <TextBlock Text="{Binding Name}"
+                                                                             Foreground="White"/>
+
+                                                                    <Button Grid.Column="1"
+                                                                            Content="×"
+                                                                            Style="{StaticResource ModernButton}"
+                                                                            Command="{Binding DataContext.RemoveEmployeeCommand, 
+                                                                                     RelativeSource={RelativeSource AncestorType=ListView}}"
+                                                                            CommandParameter="{Binding Id}"
+                                                                            Width="25"
+                                                                            Height="25"/>
+                                                                </Grid>
+                                                            </DataTemplate>
+                                                        </ItemsControl.ItemTemplate>
+                                                    </ItemsControl>
+                                                </Grid>
+                                            </Border>
+
+                                            <!-- Equipment Section -->
+                                            <Border Grid.Column="1"
+                                                    Margin="10,0,0,0"
+                                                    Background="#2D2D30"
+                                                    CornerRadius="6"
+                                                    Padding="10">
+                                                <Grid>
+                                                    <Grid.RowDefinitions>
+                                                        <RowDefinition Height="Auto"/>
+                                                        <RowDefinition Height="*"/>
+                                                    </Grid.RowDefinitions>
+
+                                                    <Grid Grid.Row="0">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="*"/>
+                                                            <ColumnDefinition Width="Auto"/>
+                                                        </Grid.ColumnDefinitions>
+
+                                                        <TextBlock Text="Przypisany Sprzęt"
+                                                                 Foreground="White"
+                                                                 FontSize="14"/>
+
+                                                        <Button Grid.Column="1"
+                                                                Content="Przypisz"
+                                                                Style="{StaticResource ModernButton}"
+                                                                Command="{Binding AssignEquipmentCommand}"
+                                                                Width="100"
+                                                                Height="30"/>
+                                                    </Grid>
+
+                                                    <ItemsControl Grid.Row="1"
+                                                                ItemsSource="{Binding AssignedEquipment}"
+                                                                Margin="0,10,0,0">
+                                                        <ItemsControl.ItemTemplate>
+                                                            <DataTemplate>
+                                                                <Grid Margin="0,0,0,5">
+                                                                    <Grid.ColumnDefinitions>
+                                                                        <ColumnDefinition Width="*"/>
+                                                                        <ColumnDefinition Width="Auto"/>
+                                                                    </Grid.ColumnDefinitions>
+
+                                                                    <TextBlock Text="{Binding Name}"
+                                                                             Foreground="White"/>
+
+                                                                    <Button Grid.Column="1"
+                                                                            Content="×"
+                                                                            Style="{StaticResource ModernButton}"
+                                                                            Command="{Binding DataContext.RemoveEquipmentCommand, 
+                                                                                     RelativeSource={RelativeSource AncestorType=ListView}}"
+                                                                            CommandParameter="{Binding Id}"
+                                                                            Width="25"
+                                                                            Height="25"/>
+                                                                </Grid>
+                                                            </DataTemplate>
+                                                        </ItemsControl.ItemTemplate>
+                                                    </ItemsControl>
+                                                </Grid>
+                                            </Border>
+                                        </Grid>
+                                    </Grid>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
+        </ListView>
     </Grid>
 </Page>
